packages/next-swc/crates/core/tests/errors/next-font-loaders/without-font-modules/assigned-to-const/output.js
import inter from '@next/font/google?{"font":"Inter","variant":"400"}'
